[tool.poetry]
name = "tis-slack-bot"
version = "0.1.0"
description = "TIS Slack Support Bot"
authors = ["Phillipe Smith <phsmithcc@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
azure-devops = "^6.0.0b4"
Flask = "^2.0.0"
gunicorn = "^20.1.0"
slack-bolt = "^1.6.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
flake8 = "^4.0.1"
bandit = "^1.7.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
